fix bug comment re-render, add delete memorials, users, add change password
