# routes/user.route.js
@@ -1,20 +1,27 @@
 const express = require("express");
 const router = express.Router();
-
 const verifyToken = require("../middlewares/auth");
-const userController = require("../controllers/User.controller");
 const { AdminRole, UserRole } = require("../middlewares/checkRole");
+const UserController = require("../controllers/User.controller");
 
-router.get("/", verifyToken, AdminRole, userController.getUsers);
-router.post("/", verifyToken, AdminRole, userController.createUser);
-router.put("/:id", verifyToken, AdminRole, userController.updateUser);
-router.delete("/:id", verifyToken, AdminRole, userController.deleteUser);
-router.patch("/:id", verifyToken, userController.changePassword);
+router.get("/", verifyToken, AdminRole, UserController.getUsers);
+router.post("/", verifyToken, AdminRole, UserController.createUser);
+router.delete('/', verifyToken, AdminRole, UserController.deleteUsers);
+router.put("/:id", verifyToken, AdminRole, UserController.updateUser);
+router.delete("/:id", verifyToken, AdminRole, UserController.deleteUser);
+router.patch("/:id", verifyToken, UserController.changePassword);
 router.get(
   "/:id/memorials",
   verifyToken,
   UserRole,
-  userController.getMemorials
+  UserController.getMemorials
 );
+
+router.get(
+  "/:id/memorials/:memorialId/comments",
+  verifyToken,
+  UserRole,
+  UserController.getCommentsByMemorial
+)
 
 module.exports = router;
